--- a/src/index.css
+++ b/src/index.css
@@ -2,64 +2,67 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+
   color-scheme: light dark;
-  color: rgba(0, 0, 0, 0.87);
+  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-  text-align: center;
-  position: sticky;
-  top: 0;
-  background-color: #242424;
-  color: rgba(255, 255, 255, 0.87);
-}
-main{
-  max-width: 1024px;
-  margin: auto;
 }
 
-p{
-  background-color: lightgray;
-  max-width: 70%;
-  padding: 15px;
-  border-radius: 30px;
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
-p span{
-  margin: 10px;
+button:hover {
+  border-color: #646cff;
 }
-p span:first-child{
-  margin-right: 0;
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
-.user_msg{
-  text-align: right;
-  margin-left: 30%;
-  display: flex;
-  flex-direction: row-reverse;
-  background-color: skyblue;
-}
-.hide {
-  visibility: hidden;
-  display: none;
-}
-form{
-  text-align: center;
-  position: sticky;
-  bottom: 0;
-}
-input{
-  width: 95%;
-  height: 40px;
-  border: none;
-  padding: 10px;
-  font-size: 1.2rem;
-}
-input:focus{
-  outline: none;
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
